LWCs/Modern Account Card/force-app/main/default/objects/Account/fields/AccountCardLogo__c.field-meta.xml
<CustomField>
    <fullName>AccountCardLogo__c</fullName>
    <label>Account Card Logo</label>
    <type>Url</type>
    <description>Company logo URL displayed in the Modern Account Card component</description>
</CustomField>