LWCs/Modern Account Card/force-app/main/default/objects/Account/fields/Brand_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_3_Name__c</fullName>
    <label>Brand 3 Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Name/label for sub-brand 3 displayed in the Account Card</description>
</CustomField>